--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <header class="header">
 
-    <a href="#home" class="logo"> <img src="images/imagee2.jpg" alt=""> </a>
+    <a href="#home" class="logo"> <img src="imagee2.jpg" alt=""> </a>
 
     <form action="" class="search-form">
         <input type="search" name="" placeholder="search here..." id="search-box">
@@ -59,7 +59,7 @@
 
     <div class="slide active">
         <div class="content">
-            <img src="images/imagee2.jpg" alt="">
+            <img src="imagee2.jpg" alt="">
            <pre><span>M  i  c  r  o  d  e  n</span></pre> 
             <h3>BEAUTY PARLOUR</h3>
             <a href="#" class="btn">read more</a>
@@ -131,33 +131,33 @@
 <section class="category">
 
     <a href="#" class="box">
-        <img src="images/category-2.png" alt="">
+        <img src="category-2.png" alt="">
         <p>makeup</p>
     </a>
 
     <a href="#" class="box">
-        <img src="images/category-1.png" alt="">
+        <img src="category-1.png" alt="">
         <p>All picks</p>
     </a>
     <a href="#" class="box">
-        <img src="images/category-4.png" alt="">
+        <img src="category-4.png" alt="">
         <p>creams</p>
     </a>
 
 
     <a href="#" class="box">
-        <img src="images/category-3.png" alt="">
+        <img src="category-3.png" alt="">
         <p>powder</p>
     </a>
 
     <a href="#" class="box">
-        <img src="images/category-6.png" alt="">
+        <img src="category-6.png" alt="">
         <p>Nailpolish</p>
     </a>
  
 
     <a href="#" class="box">
-        <img src="images/category-5.png" alt="">
+        <img src="category-5.png" alt="">
         <p>lipstick</p>
     </a>
 
